fix unit test for Product